# uav_landing_project

./: .gitattributes  .gitignore  AERIAL_NEURO_SYMBOLIC_STRATEGY.md  CACHED_AUGMENTATION_GUIDE.md  COMPREHENSIVE_SOLUTION_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_CLEANUP.md  EDGE_OPTIMIZED_STRATEGY.md  ENHANCED_AUGMENTATION_SUMMARY.md  ENHANCED_TRAINING_SUMMARY.md  FINAL_COMPLETE_SOLUTION.md  FINAL_STATUS.py  FIXED_ISSUES_SUMMARY.md  FIXES_AND_IMPROVEMENTS.md  GPS_FREE_GUIDE.md  GPU_SETUP.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LATEST_MULTI_DATASET_STRATEGY.md  NEURO_SYMBOLIC_SOLUTION_COMPLETE.md  PRODUCTION_STATUS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  README_A100_SETUP.md  README_REMOTE.md  REFINED_EDGE_STRATEGY.md  REPOSITORY_GUIDE.md  SCALLOP_CLEANUP_COMPLETE.md  TENSORRT_STATUS.md  TRAINING_FIXES_SUMMARY.md  TRANSFER_LEARNING_SUMMARY.md  USAGE_GUIDE.md  benchmark_gpu.py  cleanup_scallop.sh  cleanup_summary.py  config.py  convert_ultra_to_onnx.py  create_visualizations.py  dataset_analysis.json  (+68 more)
archive/: FINAL_STATUS.md  FINAL_ULTRA_STATUS.py  FIXES_AND_IMPROVEMENTS.md  PROJECT_COMPLETION_STATUS.md  PROJECT_SUMMARY.md  analyze_dataset.py  analyze_datasets.py  convert_ultra_to_onnx.py  create_performance_viz.py  fast_staged_training.py  final_cleanup.py  integrate_model.py  quick_test_ultra.py  staged_training.py  test_integration.py  test_segmentation_output.py  test_segmentation_simple.py  uav_landing_system.py  ultra_fast_training.py
backup_old_files/: quick_test_ultra.py
configs/: resolution_profiles.json  rtx4060ti_config.json
(+153 files in other folders)
