[project]
name = "uav-landing-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "onnx>=1.18.0",
    "onnxruntime-gpu>=1.22.0",  # GPU support - fallback to onnxruntime for CPU-only
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "matplotlib>=3.7.0",
    "albumentations>=1.3.0",
    "tqdm>=4.65.0",
    "shapely>=2.0.0",
    "dataclasses-json>=0.6.0",
    "pytest-mock>=3.14.1",
    "maturin>=1.9.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0", 
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

cpu-only = [
    "onnxruntime>=1.22.0",  # CPU-only version for systems without GPU
]
